second commit chnaged skills

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			<div class="skills">
 				<h2>Primary Skills</h2>
 				<p>HTML, CSS, JavaScript, ReactJS, MongoDB, NodeJS, ExpressJS</p>
-				<p>Java,Pyhton,Data Structure and Algorithm</p>
+				<p>Java,Pythgiton,Data Structure and Algorithm</p>
 			</div> 
             <!--Skills-Sets -->
 			<div class="skills">
